--- a/src/Componets/layout/header/Navbar/style.scss
+++ b/src/Componets/layout/header/Navbar/style.scss
@@ -7,8 +7,12 @@ body{
   position: relative;
 }
 .main-nav {
-  position: relative;
   font-family: 'Source Sans Pro', sans-serif;
+  background: #fff;
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  z-index: 10;
 
   .navbar {
     display: flex;
