--- a/src/Componets/layout/Weather/style.scss
+++ b/src/Componets/layout/Weather/style.scss
@@ -3,7 +3,7 @@
   background: linear-gradient(to left, #47a2ff, #2b52ba);
 
   .show-info {
-    max-width: 900px;
+    width: 900px;
     margin: 0 auto;
     padding: 40px 0;
 
@@ -11,12 +11,15 @@
       background: url('../../../assets/imgs/weather-body.jpg') center center no-repeat;
       -webkit-background-size: cover;
       background-size: cover;
-      padding: 80px 0;
-      width: 900px;
+      padding: 80px 25px;
+      width: 100%;
       border: 4px solid #fff;
       box-shadow: 0 0 0 10px rgba(0, 0, 0, .5);
       text-align: center;
       min-height: 550px;
+      @media screen and (max-width: 767px) {
+        padding: 30px 10px;
+      }
 
       .main-title {
         p {
@@ -29,6 +32,14 @@
           background-position: 100% 40%;
           text-transform: uppercase;
           animation: wave 10s infinite;
+          @media screen and (max-width: 991px) {
+            font-size: 40px;
+            margin-bottom: 0;
+          }
+          @media screen and (max-width: 767px) {
+            font-size: 30px;
+            line-height: 50px;
+          }
         }
       }
 
@@ -52,6 +63,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        @media screen and (max-width: 767px) {
+          flex-direction: column;
+        }
 
         .city-field {
           min-height: 40px;
@@ -59,6 +73,10 @@
           border-bottom-left-radius: 10px;
           border: 0;
           padding: 5px 40px 5px 20px;
+          @media screen and (max-width: 767px) {
+            border-radius: 10px;
+            margin-bottom: 20px;
+          }
         }
 
         .btn-send {
@@ -70,6 +88,9 @@
           font-size: 18px;
           border-top-right-radius: 10px;
           border-bottom-right-radius: 10px;
+          @media screen and (max-width: 767px){
+            border-radius: 10px;
+          }
         }
       }
 
