--- a/src/Componets/layout/header/Navbar/style.scss
+++ b/src/Componets/layout/header/Navbar/style.scss
@@ -13,6 +13,7 @@ body{
   width: 100%;
   height: 60px;
   z-index: 10;
+  box-shadow: 0 0 10px 5px rgba( 0, 0, 0, .5);
 
   .navbar {
     display: flex;
